service.yaml
apiVersion: v1
kind: Service
metadata:
  name: llm-microservice
  namespace: llm-microservice
  labels:
    app: llm-microservice
    backstage.io/kubernetes-id: llm-microservice
spec:
  selector:
    app: llm-microservice
  ports:
    - name: http
      port: 8080
      targetPort: http
